# Medicine_OCR

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  README.md  docker-compose.yml  main.py
backend/: .env.local  Dockerfile  main.py  pyproject.toml
backend/core/: config.py  deps.py  logging.py
backend/middlewares/: cros.py  logging.py  request_id.py  timing.py
backend/routes/: config.py  picknote.py
backend/schemas/: config.py
backend/scripts/: test_async.py
ci-builder/: .gitignore  Dockerfile
frontend/: afterPack.js  index.html  package.json  vite.config.js
frontend/electron/: dev-app-update.yml  main.js  preload.js
frontend/src/: App.css  App.jsx  constants.js
frontend/src/components/: InfoCard.jsx  StatBox.jsx
frontend/src/hooks/: useMachineSocket.js
frontend/src/utils/: alerts.js  logger.js  (+1 more)
logging/: docker-compose.yml  loki-config.yaml
machine_code/: .env.example  machine_controller.spec  main.py  pyproject.toml
machine_code/api/: __init__.py  app.py
machine_code/core/: __init__.py  config.py  logging.py
machine_code/experiment/: tmp_give_ip_camera.py
machine_code/scripts/: __init__.py  camera_callback.py  conv_control.py  run_cam.py  scanner_read.py  test_conveyor_trigger.py
machine_code/services/: __init__.py  backend_client.py  barcode_decoder.py  barcode_scanner.py  camera.py  controller.py  extract_candidates.py  image_store.py  infer.py  matching.py  openvino_ocr.py  parseq_infer.py  persistence.py  pipeline.py  rec_server_vino.py  recognition.py  state.py  websocket_transport.py
machine_code/utils/: load_model.py
(+6 files in other folders)
