[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aiomysql>=0.3.2",
    "aioodbc>=0.5.0",
    "aiosqlite>=0.22.1",
    "asyncpg>=0.31.0",
    "fastapi>=0.135.1",
    "hdbcli>=2.27.23",
    "loguru>=0.7.3",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "python-dotenv>=1.2.2",
    "sqlalchemy>=2.0.48",
    "sqlalchemy-hana>=4.3.0",
    "uvicorn>=0.41.0",
]
