[project]
name = "machine-code"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aiosqlite>=0.22.0",
    "fastapi>=0.135.1",
    "httpx>=0.28.1",
    #    "impactacquire",
    "loguru>=0.7.3",
    "numpy>=2.4.2",
    "opencv-python>=4.13.0.92",
    "openvino>=2026.1.0",
    "pylibdmtx>=0.1.10",
    "pydantic-settings>=2.13.1",
    "python-multipart>=0.0.22",
    "rapidocr-onnxruntime>=1.4.4",
    "requests>=2.32.5",
    "shapely>=2.0.0",
    "tqdm>=4.67.3",
    "uvicorn[standard]>=0.41.0",
    "websockets>=13.0",
    "impactacquire",
    "evdev>=1.9.3",
    "minio>=7.0",
    "pillow>=10.0",
]
[dependency-groups]
dev = [
    "pyinstaller>=6.0",
]

[tool.uv.sources]
impactacquire = { path = "impactacquire-3.7.0.4433-cp314-cp314-linux_x86_64.whl" }
